removed overlap issue

--- a/client/src/pages/ShowPage/styles.css
+++ b/client/src/pages/ShowPage/styles.css
@@ -13,7 +13,7 @@
     margin: 15px;
     width: 250px;
     height: 200px;
-    margin-right: 10%;
+    margin-right: 5%;
     padding-right: 50px;
     position: absolute;
     top: 100px;
